baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__void_return_type__02_parser__void_lambda.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_void_lambda"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "void"
              WORD "void"
            BLOCK_EXPR "{ }"
              L_BRACE "{"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_void_lambda_assign"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "void"
              WORD "void"
            BLOCK_EXPR "{ }"
              L_BRACE "{"
              R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "x"
          EQUALS "="
          CALL_EXPR
            WORD "f"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_void_lambda_stmt"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "void"
              WORD "void"
            BLOCK_EXPR "{ x; }"
              L_BRACE "{"
              WORD "x"
              SEMICOLON ";"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "(42)"
            L_PAREN "("
            INTEGER_LITERAL "42"
            R_PAREN ")"
        SEMICOLON ";"
        INTEGER_LITERAL "1"
        R_BRACE "}"

=== ERRORS ===
None
